[package]
name = "wgpu-sdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
env_logger = "0.10.0"
glam = "0.23.0"
png = "0.17.7"
pollster = "0.3.0"
rand = "0.8.5"
wgpu = "0.15.1"
winit = "0.28.3"
